syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "token/token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message CreateTokenRequest {
    int64 user_id = 1;
    string expires_at = 4;
}

message CreateTokenResponse {
    Token token = 1;
}
